[content] Changed suggested text in searchbox

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
       <header>
         <h1>arXivES</h1>
         <p>search arXiv quickly</p>
-        <input type="text" placeholder="holographs, generative adversarial networks ..." autofocus />
+        <input type="text" placeholder="harmonic series, convolutional neural networks ..." autofocus />
       </header>
       <mid>
         <div class="results"></div>
